[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
cuda = [
  "jax[cuda]>=0.5.3",
]
dev = [
  {include-group = "tests"},
]
tests = [
  "chex>=0.1.90",
  "optimistix>=0.0.10",
  "pytest>=8.4.2",
  "pytest-env>=1.2.0",
  "pytest-subtests>=0.14.2",
]

[project]
authors = [
  {name = "Jérome Eertmans", email = "jeertmans@icloud.com"},
]
dependencies = [
  "jax>=0.5.3",
]
description = "Fermat path tracing with JAX"
name = "fpt-jax"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[tool.pyright]
include = ["src/fpt_jax", "tests"]
reportMissingTypeArgument = true
reportUnnecessaryTypeIgnoreComment = true
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
env = [
  "JAX_DEBUG_NANS=True",
  "JAX_PLATFORM_NAME=cpu",
]
